--- a/09themeswitcher/index.html
+++ b/09themeswitcher/index.html
@@ -14,7 +14,7 @@
     </style>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="bg-white dark:bg-black"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
